public_html/static/css/src/enter/_enter.scss
/* ... */
[data-in='enter'][data-enterBg='15']{background-image:url('../siftal/images/bg/15.jpg')}

/* Layout */
[data-in='enter'] #pageContent{width:20%;min-width:380px;max-width:450px;min-height:370px;margin-top:20px auto;margin:10vh auto 30px;padding:30px;background-color:rgba(255,255,255,0.2);border-radius:5px;box-shadow:0 3px 6px rgba(0,0,0,0.10), 0 3px 6px rgba(0, 0, 0, 0.05);transition:0.3s;color:#fff;}
[data-in='enter'] #pageContent.large{height:400px}
[data-in='enter'] .logo{margin:0}
[data-in='enter'] .logo a{display:block;border-radius:50%}
[data-in='enter'] .logo a:hover img{background-color:rgba(0,0,0,0.1);}
[data-in='enter'] .logo a:focus img{background-color:rgba(0,0,0,0.2);}
[data-in='enter'] .logo a:active img{background-color:rgba(0,0,0,0.3);}
[data-in='enter'] .logo img{display:block;max-width:100%;height:90px;width:90px;margin:0 auto;transition:0.3s;overflow:hidden;text-align:center;background-color:rgba(0,0,0,0.05);padding:2px;border-radius:50%;}
[data-in='enter'] .logo span{display:none !important}
[data-in='enter'] h2{font-size:1.4em;overflow:hidden;margin:10px 0;text-align:center;color:#fff;line-height:1.7em;}
[data-in='enter'] h2 abbr{cursor:pointer;}
[data-in='enter'] .text p{transition:0.3s;padding:0.5em}
[data-in='enter'] .text p:hover{background-color:rgba(0,0,0,0.1);}
[data-in='enter'] .text a{color:#eee;padding:1em 0.5em;display:inline-block;transition:0.3s;}
[data-in='enter'] .text a:hover{background-color:rgba(255,255,255,0.1);}
/* sessions style*/
[data-in='enter'] .sessions > div{font-size:1.1em;line-height:2em;margin-bottom:2em;transition:0.3s;padding:0.5em;position:relative;}
[data-in='enter'] .sessions > div:hover{background-color:rgba(0,0,0,0.1);}
[data-in='enter'] .sessions > div abbr{float:right;}
[data-in='enter'] .sessions .browser{font-weight:700;}
[data-in='enter'] .sessions .os{color:#eee}
[data-in='enter'] .sessions .ip{color:#ddd}
[data-in='enter'] .sessions .lastseen{color:#ddd;position:absolute;right:0.5em;top:0.5em;}
[data-in='enter'] .sessions a{background-color:#eee;opacity:0;padding:0.2em 1em;display:inline-block;color:#333;border:2px solid transparent;position:absolute;right:0.5em;bottom:0.5em;transition:0.3s}
[data-in='enter'] .sessions > div:hover a{opacity:0.5}
[data-in='enter'] .sessions a:hover{border-color:#cab530;opacity:0.6;}
[data-in='enter'] .sessions a:focus{border-color:#444;opacity:0.8;}
[dir="rtl"] [data-in='enter'] .sessions .lastseen{left:0.5em;right:inherit;}
[dir="rtl"] [data-in='enter'] .sessions a{left:0.5em;right:inherit;}

[data-in='enter'] footer a{color:#eee;font-size:1em;padding:1em 1em;transition:0.3s;display:block;}
[data-in='enter'] footer a:hover{background-color:rgba(0,0,0,0.1)}
[data-in='enter'] footer a:focus{background-color:rgba(0,0,0,0.2)}
[data-in='enter'] footer a:last-child{text-align:right;}
[dir="rtl"] [data-in='enter'] footer a:last-child{text-align:left;}

/* form new styles*/
[data-in='enter'] form{line-height:30px;font-size:1.8em;overflow:hidden;}
[data-in='enter'] form p{font-size:0.8em;}
[data-in='enter'] form .flex{border-radius:3px;height:50px;margin:1rem 0;}
[data-in='enter'] form .flex.hide{display:none!important;}
[data-in='enter'] form .flex label{padding:0;border:none;direction:ltr;min-width:50px;width:50px;background-color:rgba(0,0,0,0.2);color:#ddd;transition:0.3s;text-align:center;font-size:0.8em;line-height:50px;outline:none;}
[data-in='enter'] form .flex label:hover{background-color:rgba(0,0,0,0.3);}
[data-in='enter'] form .flex label a:active{background-color:rgba(0,0,0,0.3);}
[data-in='enter'] form .flex label i{margin:0;display:block;}
[data-in='enter'] form .flex label a{color: #fff;display:block;line-height:50px;}
[data-in='enter'] form .flex input{padding:0 1em;line-height:50px;border:1px solid transparent;direction:ltr;width:100%;background-color:rgba(0,0,0,0.1);color:#eee;transition:0.3s;font-weight:100;}
[data-in='enter'] form .flex input.error{border-color:#ffa000;}
[data-in='enter'] form .flex input:disabled{opacity:0.8}
[data-in='enter'] form .flex input:hover{background-color:rgba(0,0,0,0.15);}
[data-in='enter'] form .flex input:focus{background-color:rgba(0,0,0,0.25);}
[data-in='enter'] form .flex input::-webkit-outer-spin-button, [data-in='enter'] form .flex input::-webkit-inner-spin-button{-webkit-appearance:none;}
[data-in='enter'] form .flex ::-webkit-input-placeholder{color:#ccc;}
[data-in='enter'] label{padding:1em 0;display:block;font-size:0.8em;}
[data-in='enter'] form textarea{min-height:120px;max-height:200px;padding:1em;line-height:2em;background-color:rgba(0,0,0,0.1);color:#eee;font-size:0.8em;min-width:100%;}
/* custom style for some inputs*/
[data-in='enter'] form #emobile label{
	font-size:30px;
	line-height:40px;
}
[data-in='enter'] form #eramz label,
[data-in='enter'] form #eramzNew label,
[data-in='enter'] form #displaynameBox label,
[data-in='enter'] form #eusername label{
	font-size:21px;
	line-height:50px;
}

[data-in='enter'] .agreement{
	background-color: rgba(0, 0, 0, 0.03);
	font-size: 1.1rem;
	line-height: 2rem;
	padding: 5px 1em;
	color: #ddd;
}
[data-in='enter'] .agreement a{color: #fff;font-weight: 700;}
[data-in='enter'] .agreement a:focus{color:$jibres;}

[data-in='enter'] form #email, [data-in='enter'] form #emailNew{font-size:0.8em;}

/* change style of autocomplete*/
[data-in='enter'] input:-webkit-autofill,[data-in='enter'] input:-webkit-autofill:hover,[data-in='enter'] input:-webkit-autofill:focus,[data-in='enter'] input:-webkit-autofill{border: none;-webkit-text-fill-color: #fff;-webkit-box-shadow: 0 0 0px 1000px #000 inset;transition: background-color 0.3 ease-in-out 0s;}
[data-in='enter'].loading-form{cursor:progress;}
[data-in='enter'] form .flex button{line-height:30px;width:100%;padding:10px;cursor:pointer;border:none;border-radius:3px;outline:none;background-color:#0275d8;color:#fff;opacity:0.6;transition:0.3s}
[data-in='enter'] form .flex button:hover{opacity:0.8}
[data-in='enter'] form .flex button:focus{opacity:1}
/* ... */

